--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ migrate_working_dir/
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
+onco/android/app/google-services.json
+android/app/google-services.json
+/android/app/google-services.json
+./android/app/google-services.json
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -42,4 +46,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-onco/android/app/google-services.json
+
